<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#add8e6"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/estilo1">

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="334dp"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:background="@drawable/fondo_edittext"
            android:hint="@string/correonuev"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextAge"
            android:layout_width="334dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/fondo_edittext"
            android:hint="@string/edad"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@+id/editTextNewUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFullName"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextNewUsername"
            android:layout_width="334dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/fondo_edittext"
            android:hint="@string/nombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAge"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="334dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/fondo_edittext"
            android:hint="@string/contraseñaNue"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextComfirmNewPassword"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/editTextComfirmNewPassword"
            android:layout_width="334dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/fondo_edittext"
            android:hint="@string/contraseñaNue"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNewUsername"
            tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="355dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/fondo_boton"
            android:text="@string/buttonRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
            tools:ignore="VisualLintButtonSize" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>